--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -52,6 +52,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "storybook": "^8.6.14",
+    "styled-jsx": "^5.1.7",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
