--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,10 @@
     },
     "test": {
       "dependsOn": ["^test"]
+    },
+    "build-storybook": {
+      "dependsOn": ["^build-storybook"],
+      "outputs": ["storybook-static/**"]
     }
   }
 }
