feat: frontendのpackage名を@fste/frontendに変更

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@practice-error-handling-on-pages-router/frontend",
+  "name": "@fste/frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
