feat: lintタスクの依存関係を追加

--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,9 @@
     "build-storybook": {
       "dependsOn": ["^build-storybook"],
       "outputs": ["storybook-static/**"]
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
     }
   }
 }
