--- a/packages/eslint-config/tsconfig.json
+++ b/packages/eslint-config/tsconfig.json
@@ -13,6 +13,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["*.js", "*.mjs", "*.ts", "src/base.js", "src/react.js"],
+  "include": ["*.js", "*.mjs", "*.ts", "src/**/*.js"],
   "exclude": ["node_modules"]
 }
