--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
     "@eslint/eslintrc": "^3.3.1",
+    "@repo/eslint-config": "workspace:^",
+    "@repo/prettier-config": "workspace:^",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-onboarding": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
@@ -54,10 +56,8 @@
     "styled-jsx": "^5.1.7",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.4",
-    "@repo/eslint-config": "workspace:^",
-    "@repo/prettier-config": "workspace:^",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "vitest": "^3.1.4"
   },
   "prettier": "@repo/prettier-config",
   "eslintConfig": {
