--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -7,6 +7,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
+    "db:migrate:dev": "prisma migrate dev --skip-seed",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:seed": "ts-node prisma/seed.ts"
