--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,10 +4,9 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "db:generate": "prisma generate",
+    "db:generate": "prisma generate --allow-no-models",
     "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:migrate:dev": "prisma migrate dev --skip-seed",
+    "db:migrate": "prisma migrate dev --skip-generate",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:seed": "ts-node prisma/seed.ts"
