--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "codegen": "turbo generate:schema && turbo codegen",
     "db:generate": "turbo db:generate",
     "db:push": "turbo db:push",
-    "db:migrate": "turbo db:migrate",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "db:migrate": "turbo db:migrate"
   },
   "devDependencies": {
     "turbo": "2.5.3"
