--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,14 +15,13 @@
     "test:coverage": "vitest --coverage",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "check-types": "tsc --noEmit",
-    "codegen": "graphql-codegen --config codegen.ts",
-    "codegen:watch": "graphql-codegen --config codegen.ts --watch"
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@apollo/client": "4.0.7",
     "@storybook/addon-themes": "^9.1.10",
     "@storybook/theming": "^8.6.14",
+    "gql.tada": "^1.8.12",
     "graphql": "^16.10.0",
     "js-cookie": "^3.0.5",
     "next": "15.3.2",
@@ -34,10 +33,6 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@graphql-codegen/cli": "^5.0.3",
-    "@graphql-codegen/client-preset": "^4.8.3",
-    "@graphql-codegen/typed-document-node": "^5.1.2",
-    "@graphql-typed-document-node/core": "^3.2.0",
     "@repo/eslint-config": "workspace:^",
     "@repo/prettier-config": "workspace:^",
     "@storybook/addon-docs": "^9.1.10",
