feat: integrate Auth0 for authentication and update homepage layout
- Added Auth0 React SDK to enable authentication features.
- Refactored the homepage to include a new LoginSection component.
- Removed unnecessary elements and simplified the layout for better user experience.
- Updated dependencies in pnpm-lock.yaml to include Auth0 and related packages.

--- a/apps/web-api/.env.example
+++ b/apps/web-api/.env.example
@@ -3,4 +3,8 @@ PORT=3001
 CORS_ORIGIN=http://localhost:3000
 
 # PostgreSQL Database Configuration
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://user:password@localhost:5432/mydb?schema=public"
+
+# Auth0 Configuration
+AUTH0_DOMAIN=your-tenant.auth0.com
+AUTH0_AUDIENCE=https://your-api-audience
