--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_GRAPHQL_URL=http://localhost:3001/graphql
+
+NEXT_PUBLIC_AUTH0_CLIENT_ID=your-client-id
+NEXT_PUBLIC_AUTH0_DOMAIN=your-tenant.auth0.com
+NEXT_PUBLIC_AUTH0_AUDIENCE=https://your-api-audience
