--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@apollo/client": "4.0.7",
     "@storybook/addon-themes": "^9.1.10",
     "@storybook/theming": "^8.6.14",
+    "@auth0/auth0-react": "^2.5.0",
     "graphql": "^16.10.0",
     "js-cookie": "^3.0.5",
     "next": "15.3.2",
