--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.11",
+    "@auth0/auth0-react": "^2.5.0",
     "graphql": "^16.10.0",
     "next": "15.3.2",
     "react": "^19.1.0",
