--- a/apps/web-api/package.json
+++ b/apps/web-api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nestjs/apollo": "^12.2.1",
     "@nestjs/common": "^10.4.9",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.4.9",
     "@nestjs/graphql": "^12.2.1",
     "@nestjs/platform-express": "^10.4.9",
@@ -28,7 +29,7 @@
     "@repo/database": "workspace:*",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.14.2",
     "graphql": "^16.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
