--- a/apps/web-api/.env.example
+++ b/apps/web-api/.env.example
@@ -1,3 +1,6 @@
 NODE_ENV=development
 PORT=3001
 CORS_ORIGIN=http://localhost:3000
+
+# PostgreSQL Database Configuration
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/mydb?schema=public"
