--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,13 +21,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.11",
+    "@storybook/addon-themes": "^9.1.10",
+    "@storybook/theming": "^8.6.14",
     "graphql": "^16.10.0",
+    "js-cookie": "^3.0.5",
     "next": "15.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/eslintrc": "^3.3.1",
     "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/client-preset": "^4.8.3",
@@ -35,33 +40,34 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@repo/eslint-config": "workspace:^",
     "@repo/prettier-config": "workspace:^",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-onboarding": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/experimental-addon-test": "^8.6.14",
-    "@storybook/experimental-nextjs-vite": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/test": "^8.6.14",
+    "@storybook/addon-docs": "^9.1.10",
+    "@storybook/addon-onboarding": "^9.1.10",
+    "@storybook/addon-vitest": "9.1.10",
+    "@storybook/nextjs-vite": "^9.1.10",
+    "@storybook/react": "^9.1.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/cookie": "^1.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.17.50",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
     "@vitest/browser": "^3.1.4",
     "@vitest/coverage-v8": "^3.1.4",
+    "cookie": "^1.0.2",
     "eslint": "^9.27.0",
     "eslint-config-next": "15.1.8",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-storybook": "^9.1.10",
     "graphql-scalars": "^1.24.2",
     "jsdom": "^26.1.0",
     "msw": "^2.8.4",
     "playwright": "^1.52.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "storybook": "^8.6.14",
+    "storybook": "^9.1.10",
     "styled-jsx": "^5.1.7",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
