--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,7 +20,7 @@
     "codegen:watch": "graphql-codegen --config codegen.ts --watch"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.11",
+    "@apollo/client": "4.0.7",
     "@storybook/addon-themes": "^9.1.10",
     "@storybook/theming": "^8.6.14",
     "graphql": "^16.10.0",
