feat(web/web-api): auth0を利用して、APIを保護

--- a/apps/web-api/.env.example
+++ b/apps/web-api/.env.example
@@ -4,3 +4,10 @@ CORS_ORIGIN=http://localhost:3000
 
 # PostgreSQL Database Configuration
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/mydb?schema=public"
+
+# Auth0 Configuration
+# Your Auth0 tenant domain WITHOUT protocol (e.g., dev-xxxxx.us.auth0.com)
+AUTH0_DOMAIN=your-tenant.auth0.com
+# Auth0 API Identifier - must match the frontend AUTH0_AUDIENCE
+# (from Auth0 Dashboard > APIs > Your API)
+AUTH0_AUDIENCE=https://your-api-identifier
