--- a/apps/web-api/package.json
+++ b/apps/web-api/package.json
@@ -18,19 +18,23 @@
     "generate:schema": "ts-node -r tsconfig-paths/register scripts/generate-schema.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.2",
     "@nestjs/apollo": "^12.2.1",
     "@nestjs/common": "^10.4.9",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.4.9",
     "@nestjs/graphql": "^12.2.1",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.9",
-    "@apollo/server": "^4.11.2",
     "@prisma/client": "^5.22.0",
     "@repo/database": "workspace:*",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "graphql": "^16.10.0",
+    "jwks-rsa": "^3.2.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -44,6 +48,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "prisma": "^5.22.0",
