--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -1,1 +1,16 @@
 NEXT_PUBLIC_GRAPHQL_URL=http://localhost:3001/graphql
+
+# Auth0 Configuration
+# Your Auth0 tenant domain WITHOUT protocol (e.g., dev-xxxxx.us.auth0.com)
+AUTH0_DOMAIN=your-tenant.auth0.com
+# Auth0 Application Client ID (from Auth0 Dashboard > Applications > Your App)
+AUTH0_CLIENT_ID=your_auth0_client_id
+# Auth0 Application Client Secret (from Auth0 Dashboard > Applications > Your App)
+AUTH0_CLIENT_SECRET=your_auth0_client_secret
+# Generate a long, secret value using: openssl rand -hex 32
+AUTH0_SECRET=use_a_long_random_string_generated_by_openssl_rand_hex_32
+# The base URL of your Next.js application
+APP_BASE_URL=http://localhost:3000
+# Auth0 API Identifier - must match backend AUTH0_AUDIENCE
+# (from Auth0 Dashboard > APIs > Your API)
+AUTH0_AUDIENCE=https://your-api-identifier
