--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@apollo/client": "4.0.7",
     "@apollo/client-integration-nextjs": "^0.13.2",
+    "@auth0/nextjs-auth0": "^4.10.0",
     "@storybook/addon-themes": "^9.1.10",
     "@storybook/theming": "^8.6.14",
     "graphql": "^16.10.0",
